--- a/contact.html
+++ b/contact.html
@@ -56,16 +56,14 @@
 
   <!-- +++++ Contact Section +++++ -->
 
-  <div class="container pt">
-    <div class="row mt">
-      <div class="col-lg-6 col-lg-offset-3 centered">
+  <div class="container pt centered">
         <h3>CONTACT ME</h3>
          <div id="footer">
         <div class="container ">
           <div class="row">
             <div class="col-lg-6 ">
               <div class="container ">
-                <div class="row centered">
+                <div class="row ">
                   <div class="text-center">
                     <a onclick="" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
                     <a onclick="" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
@@ -77,8 +75,6 @@
             </div>
           </div>
         </div>
-         </div>
-      </div>
     </div>
     <!-- /row -->
   </div>
