--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
   </div>
   <!-- /container -->
 
-
   <!-- +++++ Footer Section +++++ -->
 
   <div id="footer">
@@ -122,7 +121,7 @@
             <div class="text-center">
               <a onclick="" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
               <a onclick="" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
-              <a onclick="" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"></i></a>
+              <a onclick="" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github" href="https://github.com/Pawanupadhyay10"></i></a>
               <a onclick="" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
             </div>
             </div>
