--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
           <li><a href="work.html">Projects</a></li>
           <li><a href="about.html">About me</a></li>
           <li><a href="blog.html">Tech</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Certifications</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -58,7 +58,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
-          <img src="img/user.png" alt="Stanley">
+          <img src="img/edit1.png" alt="Stanley">
           <h1>A little About me 🖐!</h1>
           <p>Hello everybody. I'm Pawan ,🎓 I’m an Open-Source enthusiast & a junior pursuing my Bachelors in Computer Science & Engineering , from India.</p>
           <p>📱I’m an Android Developer & 💻 MERN/MEAN full stack developer.</p>
@@ -71,10 +71,7 @@
     <!-- /container -->
   </div>
   <!-- /ww -->
-
-
   <!-- +++++ Information Section +++++ -->
-
   <div class="container pt">
     <div class="row mt centered">
       <div class="col-lg-3">
@@ -130,9 +127,7 @@
     <!-- /row -->
   </div>
   <!-- /container -->
-
-  <!-- +++++ Footer Section +++++ -->
-
+<!-- +++++ Footer Section +++++ -->
   <div id="footer">
     <div class="container">
       <div class="row">
@@ -151,7 +146,6 @@
       </div>
     </div>
   </div>
-
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
