--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,9 @@
 <body>
 
   <!-- Static navbar -->
-  <div class="navbar navbar-inverse navbar-static-top">
-    <div class="container">
+ 
+  <div class="navbar navbar-inverse navbar-static-top ">
+    <div class="container ">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon-bar"></span>
@@ -47,37 +48,117 @@
           <li><a href="about.html">About me</a></li>
           <li><a href="work.html">Projects</a></li>
           <li><a href="blog.html">Tech</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Certifications</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
     </div>
   </div>
+  
+<!-- +++++ Projects Section +++++ -->
+
+<div class="container pt">
+  <div class="row mt">
+    <div class="col-lg-6 col-lg-offset-3 centered ">
+      <h1>🎓 My Certificates 🎓</h1>
+    </div>
+  </div>
+  <div class="row mt centered">
+    <h2>Udemy-Certificates</h2>
+    <div class="col-lg-4">
+      <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-c33de8c6-38fe-4146-b7e0-7ed519211d25.jpg"><img class="img-responsive" src="https://udemy-certificate.s3.amazonaws.com/image/UC-c33de8c6-38fe-4146-b7e0-7ed519211d25.jpg" alt="" /></a>
+      <p>Android App Development basic</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-821d1ac8-0222-49cb-87aa-06838e55b76b.jpg"><img class="img-responsive" src="https://udemy-certificate.s3.amazonaws.com/image/UC-821d1ac8-0222-49cb-87aa-06838e55b76b.jpg" alt="" /></a>
+      <p>Android App Development intermediate 1</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://udemy-certificate.s3.amazonaws.com/image/UC-e6e7b404-b453-4e48-baac-f3b3595b7b2e.jpg"><img class="img-responsive" src="https://udemy-certificate.s3.amazonaws.com/image/UC-e6e7b404-b453-4e48-baac-f3b3595b7b2e.jpg" alt="" /></a>
+      <p>Android App Development intermediate 2</p>
+    </div>
+  </div>
+  <!-- /row -->
+  <div class="row mt centered">
+    <h2>Coursera-Certificates</h2>
+    <div class="col-lg-4">
+      <a href="https://www.coursera.org/account/accomplishments/certificate/F6BN2MFFY4GF"><img class="img-responsive" src="img/javaandroid.png" alt="" /></a>
+      <p>Java for Android</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://coursera.org/share/1e894bf9943e8c65e8f31cc0e7883bd4"><img class="img-responsive" src="img/HtMl.png" alt="" /></a>
+      <p>HTML-5</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://www.coursera.org/account/accomplishments/certificate/76Q7SGYLBP2B"><img class="img-responsive" src="img/Androidcenter.png" alt="" /></a>
+      <p>Android Apps</p>
+    </div>
+  </div>
+  <!-- /row -->
+  <div class="row mt centered">
+    <h3>Sololearn-Certificates</h3>
+    <div class="col-lg-4">
+      <a href="https://www.sololearn.com/Certificate/1092-11009661/jpg/"><img class="img-responsive" src="https://www.sololearn.com/Certificate/1092-11009661/jpg/" alt="" /></a>
+      <p>Angular+NestJS</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://www.sololearn.com/Certificate/1024-11009661/jpg/"><img class="img-responsive" src="https://www.sololearn.com/Certificate/1024-11009661/jpg/" alt="" /></a>
+      <p>Javascript</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://www.sololearn.com/Certificate/1023-11009661/jpg/"><img class="img-responsive" src="https://www.sololearn.com/Certificate/1023-11009661/jpg/" alt="" /></a>
+      <p>CSS</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://www.sololearn.com/Certificate/1068-11009661/jpg/"><img class="img-responsive"
+          src="https://www.sololearn.com/Certificate/1068-11009661/jpg/" alt="" /></a>
+      <p>Java</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://www.sololearn.com/Certificate/1089-11009661/jpg/"><img class="img-responsive"
+          src="https://www.sololearn.com/Certificate/1089-11009661/jpg/" alt="" /></a>
+      <p>C</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://www.sololearn.com/Certificate/1073-11009661/jpg/"><img class="img-responsive"
+          src="https://www.sololearn.com/Certificate/1073-11009661/jpg/" alt="" /></a>
+      <p>Python</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://www.sololearn.com/Certificate/1060-11009661/jpg/"><img class="img-responsive" src="https://www.sololearn.com/Certificate/1060-11009661/jpg/"
+          alt="" /></a>
+      <p>SQL</p>
+    </div>
+    <div class="col-lg-4">
+      <a href="https://www.sololearn.com/Certificate/1051-11009661/jpg/"><img class="img-responsive" src="https://www.sololearn.com/Certificate/1051-11009661/jpg/"
+          alt="" /></a>
+      <p>C++</p>
+    </div>
+    </div>
+  </div>
+</div>
+<!-- /container -->
 
   <!-- +++++ Contact Section +++++ -->
-
-  <div class="container pt centered">
-        <h3>CONTACT ME</h3>
-         <div id="footer">
+<div id="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
         <div class="container ">
-          <div class="row">
-            <div class="col-lg-6 ">
-              <div class="container ">
-                <div class="row ">
-                  <div class="text-center">
-                    <a onclick="" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a onclick="" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
-                    <a onclick="" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"></i></a>
-                    <a onclick="" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
-                  </div>
-                </div>
-              </div>
+          <div class="row ">
+            <div class="text-center">
+              <a onclick="" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+              <a onclick="" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+              <a onclick="" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"
+                  href="https://github.com/Pawanupadhyay10"></i></a>
+              <a onclick="" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
             </div>
           </div>
         </div>
+      </div>
     </div>
-    <!-- /row -->
   </div>
+</div>
   <!-- /container -->
 
   <!-- +++++ Footer Section +++++ -->
