--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="about.html">About me</a></li>
           <li><a href="work.html">Projects</a></li>
           <li><a href="blog.html">Tech</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Certifications</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -58,12 +58,11 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
-          <img src="img/user.png" alt="Stanley">
+          <img src="img/edit1.png" alt="Stanley">
           <h1>🖐 Hi, I am Pawan Upadhyay</h1>
           <p>Hello everybody. I'm Pawan, a junior pursuing my Bachelors in Computer Science & Engineering , student at UTU University , India.</p>
           <p>👨‍💻 I am passionate about Mobile app development, Web Dev, Machine Learning, DevOps ,Kubernetes & I enjoy learning new
           things.</p>
-
         </div>
         <!-- /col-lg-8 -->
       </div>
