--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stanley - Bootstrap Freelancer Template</title>
+  <title>Pawan Upadhyay</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -23,13 +23,11 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Template Name: Stanley
-    Template URL: https://templatemag.com/stanley-bootstrap-freelancer-template/
-    Author: TemplateMag.com
-    License: https://templatemag.com/license/
-  ======================================================= -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.10.1/bootstrap-social.css" rel="stylesheet">
 </head>
+
 
 <body>
 
@@ -38,18 +36,18 @@
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        <a class="navbar-brand" href="index.html">STANLEY</a>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">Home</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="work.html">Work</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About me</a></li>
+          <li><a href="work.html">Projects</a></li>
+          <li><a href="blog.html">Tech</a></li>
+          <li><a href="contact.html">Certifications</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -62,19 +60,18 @@
   <div class="container pt">
     <div class="row mt">
       <div class="col-lg-6 col-lg-offset-3 centered">
-        <h3>MY WORK</h3>
-        <hr>
-        <p>Show your work here. Dribbble shots from the awesome designer <a href="http://dribbble.com/wanderingbert">David Creighton-Pester</a>.</p>
+        <h3>MY Projects</h3>
       </div>
     </div>
     <div class="row mt centered">
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port01.jpg" alt="" /></a>
-        <p>APE</p>
+        <a href="https://play.google.com/store/apps/details?id=com.bawpawan.dev.yourssolution"><img class="img-responsive" src="img/solutionHub.png" alt="" /></a>
+        <p>Educational Social App 📗📘📕📙</p>
       </div>
       <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port02.jpg" alt="" /></a>
-        <p>RAIDERS</p>
+        <a href="https://github.com/Pawanupadhyay10/Instagram-clone"><img class="img-responsive" src="https://p.kindpng.com/picc/s/159-1596109_logo-instagram-vector-2017-hd-png-download.png" alt="" /></a>
+        <p>Instagram-clone </p>
+        <p>using MERN</p>
       </div>
       <div class="col-lg-4">
         <a href="work01.html"><img class="img-responsive" src="img/portfolio/port03.jpg" alt="" /></a>
@@ -106,50 +103,22 @@
   <div id="footer">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4">
-          <h4>My Bunker</h4>
-          <p>
-            Some Address 987,<br/> +34 9054 5455, <br/> Madrid, Spain.
-          </p>
+        <div class="col-lg-6">
+          <div class="container">
+            <div class="row">
+              <div class="text-center">
+                <a onclick="" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+                <a onclick="" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                <a onclick="" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"
+                    href="https://github.com/Pawanupadhyay10"></i></a>
+                <a onclick="" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- /col-lg-4 -->
-
-        <div class="col-lg-4">
-          <h4>My Links</h4>
-          <p>
-            <a href="#">Dribbble</a><br/>
-            <a href="#">Twitter</a><br/>
-            <a href="#">Facebook</a>
-          </p>
-        </div>
-        <!-- /col-lg-4 -->
-
-        <div class="col-lg-4">
-          <h4>About Stanley</h4>
-          <p>This cute theme was created to showcase your work in a simple way. Use it wisely.</p>
-        </div>
-        <!-- /col-lg-4 -->
       </div>
     </div>
   </div>
-
-  <div id="copyrights">
-    <div class="container">
-      <p>
-        &copy; Copyrights <strong>Stanley</strong>. All Rights Reserved
-      </p>
-      <div class="credits">
-        <!--
-          You are NOT allowed to delete the credit link to TemplateMag with free version.
-          You can delete the credit link only if you bought the pro version.
-          Buy the pro version with working PHP/AJAX contact form: https://templatemag.com/stanley-bootstrap-freelancer-template/
-          Licensing information: https://templatemag.com/license/
-        -->
-        Created with Stanley template by <a href="https://templatemag.com/">TemplateMag</a>
-      </div>
-    </div>
-  </div>
-  <!-- / copyrights -->
 
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
