--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
           <li><a href="about.html">About me</a></li>
           <li><a href="work.html">Projects</a></li>
           <li><a href="blog.html">Tech</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Certifications</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <p><img src="img/user.png" width="50px" height="50px">
+          <p><img src="img/edit1.png" width="50px" height="50px">
           <section class="interests pt-5 pb-5">
           
             <h1 class="display-4">Tech I'm familiar with</h1>
