--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
-          <img src="img/edit1.png" alt="Stanley">
+          <img src="img/edit1.png" alt="Pawan">
           <h1>A little About me 🖐!</h1>
           <p>Hello everybody. I'm Pawan ,🎓 I’m an Open-Source enthusiast & a junior pursuing my Bachelors in Computer Science & Engineering , from India.</p>
           <p>📱I’m an Android Developer & 💻 MERN/MEAN full stack developer.</p>
@@ -71,27 +71,75 @@
     <!-- /container -->
   </div>
   <!-- /ww -->
+  <!-- education section -->
+  <div class="container centered">
+    <div class="row" style="background-color: rgb(156, 238, 210);">
+      <h1>Education/Academics</h1>
+      <h3>Bachelor's Degree in Computer Science & Engineering</h3>
+      <h3>THDC Institute of Hydropower Engineering and Technology, Tehri, Uttarakhand
+      (Approved by AICTE, UTU Affiliated Government Institute)</h3>
+      <h3>2018 - 2022</h3>
+    </div>
+  </div>
+
+  <!-- Experience -->
+  <br></br>
+  <div class="container centered m-2">
+    <div class="row">
+      <h1>Experience</h1>
+     <ul style="background-color: rgb(156, 238, 210);" >
+      <h3><li><b>Software Developer Intern</b></li></h3>
+      <a href="https://www.colouredcow.com/">Internship</a> 
+      <li><h4>I gained exposure to working with teams in an organizational environment and polished   his skills in Laravel. I am ready to be launched into the pool of talented graduates.</h4>
+      </li>
+      <li><a href="https://media-exp3.licdn.com/dms/document/C4D2DAQFrOdEJeQSqng/profile-treasury-document-pdf-analyzed/0/1623474073770?e=1625313600&v=beta&t=-XmUg5wBxRji5lCXE5n6qiUIv43Ld6adCRemyK51tSw">Completion Certificate of Internship</a></li>
+     <h5>Employed duration 2 months (Jan 2021 – Feb 2021), Location :Tehri Garhwal, Uttarakhand, India.</h5>
+     <br></br>
+     </ul>
+    </div>
+  </div>
+   <br></br>
+  <div class="container centered">
+    <div class="row " style="background-color: rgb(156, 238, 210);">
+      <ul>
+        <h3>
+          <li><b>Online Doubt expert (Educator)</b></li>
+        </h3>
+        <a href="https://www.Vedantu.com/">Internship</a>
+        <li><h3>Learning and teaching 📙 is my passion along with interacting to new pepoles.</h3></li>
+          <h5>Employment Duration 5 mos(Jan 2019 – May 2019)
+          Location Haridwar Area, India</h5>
+        <li><a
+            href="https://media-exp1.licdn.com/dms/document/C4D2DAQFNNRd2JPvdBQ/profile-treasury-document-pdf-analyzed/0/1623492147400?e=1625313600&v=beta&t=fkxbXBMEqOZPUOh4-1vWSnVryqxkjJ0ocZWNHihY7rU">Completion
+            Certificate of Internship</a></li>
+      </ul>
+    </div>
+  </div>
   <!-- +++++ Information Section +++++ -->
+  <br>
+  <div class="container centered">
+    <h1>Awards/Badges</h1>
+  </div>
   <div class="container pt">
     <div class="row mt centered">
       <div class="col-lg-3">
-        <span class="glyphicon glyphicon-book"></span>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <img src="img/ok3.png">
+        <p>Microsoft Azure Developer League</p>
       </div>
 
       <div class="col-lg-3">
-        <span class="glyphicon glyphicon-user"></span>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <img src="https://developers.google.com/profile/badges/activity/android/install-android-studio/badge.svg">
+          <p>Android Studio User Badge</p>
       </div>
 
       <div class="col-lg-3">
-        <span class="glyphicon glyphicon-fire"></span>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      <img src="img/badge231.png">
+      <p>Attendee I/O '21 Badge</p>
       </div>
 
       <div class="col-lg-3">
-        <span class="glyphicon glyphicon-globe"></span>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      <img src="https://developers.google.com/profile/badges/profile/created-profile/created_profile.svg">
+      <p>Created Google Developer Profile Badge</p>
       </div>
     </div>
     <!-- /row -->
