--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stanley - Bootstrap Freelancer Template</title>
+  <title>Pawan Upadhyay</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -26,7 +26,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.10.1/bootstrap-social.css" rel="stylesheet">
-
+  
 </head>
 
 <body>
@@ -55,63 +55,116 @@
   </div>
   
 <!-- Tech -->
-<div class="container pt">
-  <div class="row mt ">
-    <div class="col-lg-3">
-      <img style="height: auto;width: auto;" src="img/Cplus1.png">
-      <p>C++</p>
+<div class="container">
+  <h1>Tech I'm familiar with</h1>
+  <p>Tech stack</p>
+  <div class="row">
+    <div class="col-lg-4 ">
+     <span><img src="img/c++plus1.png"></span>
+     <p>C++</p>
     </div>
-
-    <div class="col-lg-1">
-      <img src="https://developers.google.com/profile/badges/activity/android/install-android-studio/badge.svg">
-      <p>Android Studio User Badge</p>
+    <div class="col-lg-4 ">
+      <span><img src="img/c++plus11.png"></span>
+      <p>Java</p>
     </div>
-
-    <div class="col-lg-1">
-      <img src="img/badge231.png">
-      <p>Attendee I/O '21 Badge</p>
-    </div>
-
-    <div class="col-lg-1">
-      <img src="https://developers.google.com/profile/badges/profile/created-profile/created_profile.svg">
-      <p>Created Google Developer Profile Badge</p>
+    <div class="col-lg-4">
+      <span><img src="img/c++plus2.png"></span>
+      <p>Python</p>
     </div>
   </div>
-  <!-- /row -->
-
-  <div class="row mt">
-    <!-- /colg-lg-6 -->
-
-    <div class="col-lg-6">
-      <h4>THE SKILLS</h4> Mobile App Development
-      <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="90"
-          aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-          <span class="sr-only">60% Complete</span>
-        </div>
-      </div>
-
-      Web Development
-      <div class="progress">
-        <div class="progress-bar progress-bar-theme  progress-bar-striped" role="progressbar" aria-valuenow="80"
-          aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
-          <span class="sr-only">80% Complete</span>
-        </div>
-      </div>
-
-      DevOps
-      <div class="progress">
-        <div class="progress-bar progress-bar-theme  progress-bar-striped" role="progressbar" aria-valuenow="95"
-          aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-          <span class="sr-only">95% Complete</span>
-        </div>
-      </div>
-
+  <div class="row">
+    <div class="col-lg-4 ">
+      <span><img src="img/c++plus4.png"></span>
+      <p>C</p>
     </div>
-    <!-- /col-lg-6 -->
+    <div class="col-lg-4 ">
+      <span><img src="img/c++plus5.png"></span>
+      <p>HTML-5</p>
+    </div>
+    <div class="col-lg-4">
+      <span><img src="img/c++plus6.png"></span>
+      <p>CSS-3</p>
+    </div>
   </div>
-  <!-- /row -->
+  <div class="row">
+    <div class="col-lg-4 ">
+      <span><img src="img/c++plus7.png"></span>
+      <p>Javascript</p>
+    </div>
+    <div class="col-lg-4 ">
+      <span><img src="img/c++plus8.png"></span>
+      <p>React</p>
+    </div>
+    <div class="col-lg-4">
+      <span><img src="img/c++plus9.png"></span>
+      <p>Angular</p>
+    </div>
+  </div>
+    <div class="row">
+      <div class="col-lg-4 ">
+        <span><img src="img/c++plus10.png"></span>
+        <p>Bootstrap</p>
+      </div>
+      <div class="col-lg-4 ">
+        <span><img src="img/c++plus11(1).png"></span>
+        <p>Express js</p>
+      </div>
+      <div class="col-lg-4">
+        <span><img src="img/c++plus12.png"></span>
+        <p>Node js</p>
+      </div>
+    </div>
+      <div class="row">
+        <div class="col-lg-4 ">
+          <span><img src="img/c++plus13.png"></span>
+          <p>MongoDB</p>
+        </div>
+        <div class="col-lg-4 ">
+          <span><img src="img/c++plus14.png"></span>
+          <p>MySQL</p>
+        </div>
+        <div class="col-lg-4">
+          <span><img src="img/c++plus15.png"></span>
+          <p>Firebase</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 ">
+          <span><img src="img/c++plus16.png"></span>
+          <p>Kotlin</p>
+        </div>
+        <div class="col-lg-4 ">
+          <span><img src="img/c++plus17.png"></span>
+          <p>Android Studio</p>
+        </div>
+        <div class="col-lg-4">
+          <span><img src="img/c++plus18.png"></span>
+          <p>Flutter</p>
+        </div>
+      </div>
+        <div class="row">
+          <div class="col-lg-4 ">
+            <span><img src="img/c++plus19.png"></span>
+            <p>Typescript</p>
+          </div>
+          <div class="col-lg-4 ">
+            <span><img src="img/c++plus20.png"></span>
+            <p>Git</p>
+          </div>
+          <div class="col-lg-4">
+            <span><img src="img/c++plus21.png"></span>
+            <p>GitHub</p>
+          </div>
+        </div>
+          <div class="row">
+            <div class="col-lg-4 ">
+              <span><img src="img/c++plus22.png"></span>
+              <p>Laravel</p>
+            </div>
+            </div>
+          </div>
 </div>
+
   <!-- +++++ Footer Section +++++ -->
 
 <div id="footer">
