--- a/index.html
+++ b/index.html
@@ -75,38 +75,30 @@
 
   <!-- +++++ Projects Section +++++ -->
 
-  <div class="container pt">
-    <div class="row mt centered">
-      <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port01.jpg" alt="" /></a>
-        <p>APE</p>
-      </div>
-      <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port02.jpg" alt="" /></a>
-        <p>RAIDERS</p>
-      </div>
-      <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port03.jpg" alt="" /></a>
-        <p>VIKINGS</p>
-      </div>
-    </div>
-    <!-- /row -->
-    <div class="row mt centered">
-      <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port04.jpg" alt="" /></a>
-        <p>YODA</p>
-      </div>
-      <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port05.jpg" alt="" /></a>
-        <p>EMPERORS</p>
-      </div>
-      <div class="col-lg-4">
-        <a href="work01.html"><img class="img-responsive" src="img/portfolio/port06.jpg" alt="" /></a>
-        <p>CHIEFS</p>
+  <section class="features_3azU">
+    <div class="container">
+      <div class="row">
+        <div class="col col-lg-4">
+          <div class="text--center"><img href="work.html"class="featureImage_ZtzX" src="img/build(2).png" alt="I build"></div>
+          <h3>I build</h3>
+          <p>I believe in problem solving, and build projects that solve real-world problems. I love web technologies,
+            CLIs, mobile apps and DevOps.</p>
+        </div>
+        <div class="col col-lg-4">
+          <div class="text--center"><img href="about.html"class="featureImage_ZtzX" src="img/build3.png" alt="My Portfolio"></div>
+          <h3>My Portfolio</h3>
+          <p>I build projects, write blogs, and contribute to open source. Read more about me, view my projects, or read
+            about my experiences.</p>
+        </div>
+        <div class="col col-lg-4">
+          <div class="text--center"><img href="blog.html"class="featureImage_ZtzX" src="img/build4.png" alt="Open Source"></div>
+          <h3>Open Source</h3>
+          <p>Active member of open source community, experience of GSoC, MLH init, Coding Blocks BOSS and
+            other programs.</p>
+        </div>
       </div>
     </div>
-    <!-- /row -->
-  </div>
+  </section>
   <!-- /container -->
 
   <!-- +++++ Footer Section +++++ -->
