--- a/about.html
+++ b/about.html
@@ -71,9 +71,10 @@
     <!-- /container -->
   </div>
   <!-- /ww -->
+  <br>
   <!-- education section -->
   <div class="container centered">
-    <div class="row" style="background-color: rgb(156, 238, 210);">
+    <div class="row" style="background-color:  #f1eded;">
       <h1>Education/Academics</h1>
       <h3>Bachelor's Degree in Computer Science & Engineering</h3>
       <h3>THDC Institute of Hydropower Engineering and Technology, Tehri, Uttarakhand
@@ -83,16 +84,18 @@
   </div>
 
   <!-- Experience -->
-  <br></br>
+  <br>
   <div class="container centered m-2">
     <div class="row">
       <h1>Experience</h1>
-     <ul style="background-color: rgb(156, 238, 210);" >
-      <h3><li><b>Software Developer Intern</b></li></h3>
+     <ul style="background-color:  #f1eded;" >
+      <div><li><h3>
+        <b>Software Developer Intern</b>
+      </h3></li></div>
       <a href="https://www.colouredcow.com/">Internship</a> 
-      <li><h4>I gained exposure to working with teams in an organizational environment and polished   his skills in Laravel. I am ready to be launched into the pool of talented graduates.</h4>
-      </li>
-      <li><a href="https://media-exp3.licdn.com/dms/document/C4D2DAQFrOdEJeQSqng/profile-treasury-document-pdf-analyzed/0/1623474073770?e=1625313600&v=beta&t=-XmUg5wBxRji5lCXE5n6qiUIv43Ld6adCRemyK51tSw">Completion Certificate of Internship</a></li>
+      <div><li><h4>I gained exposure to working with teams in an organizational environment and polished   his skills in Laravel. I am ready to be launched into the pool of talented graduates.</h4>
+      </li></div>
+      <div><li><a href="https://media-exp3.licdn.com/dms/document/C4D2DAQFrOdEJeQSqng/profile-treasury-document-pdf-analyzed/0/1623474073770?e=1625313600&v=beta&t=-XmUg5wBxRji5lCXE5n6qiUIv43Ld6adCRemyK51tSw">Completion Certificate of Internship</a></li></div>
      <h5>Employed duration 2 months (Jan 2021 – Feb 2021), Location :Tehri Garhwal, Uttarakhand, India.</h5>
      <br></br>
      </ul>
@@ -100,7 +103,7 @@
   </div>
    <br></br>
   <div class="container centered">
-    <div class="row " style="background-color: rgb(156, 238, 210);">
+    <div class="row " style="background-color: #f1eded;">
       <ul>
         <h3>
           <li><b>Online Doubt expert (Educator)</b></li>
@@ -183,10 +186,14 @@
           <div class="container">
             <div class="row">
               <div class="text-center">
-                <a onclick="" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
-                <a onclick="" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
-                <a onclick="" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"></i></a>
-                <a onclick="" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+                <a onclick="" href="https://www.facebook.com/profile.php?id=100014167358994"
+                  class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+                <a onclick="" href="https://www.linkedin.com/in/narayan-pawan/"
+                  class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                <a onclick="" href="https://github.com/Pawanupadhyay10" class="btn btn-social-icon btn-lg btn-github"><i
+                    class="fa fa-github"></i></a>
+                <a onclick="" href="mailto:pawandev1099@gmail.com" class="btn btn-social-icon btn-lg btn-twitter"><i
+                    class="fa fa-envelope"></i></a>
               </div>
             </div>
           </div>
