--- a/index.html
+++ b/index.html
@@ -74,25 +74,25 @@
 
 
   <!-- +++++ Projects Section +++++ -->
-
+<br>
   <section class="features_3azU">
     <div class="container">
       <div class="row">
         <div class="col col-lg-4">
-          <div class="text--center"><img href="work.html"class="featureImage_ZtzX" src="img/build(2).png" alt="I build"></div>
-          <h3>I build</h3>
+          <div class="text--center"><a href="work.html"><img class="featureImage_ZtzX" src="img/build(2).png" alt="I build"></div>
+          <h3>I build</h3></a>
           <p>I believe in problem solving, and build projects that solve real-world problems. I love web technologies,
             CLIs, mobile apps and DevOps.</p>
         </div>
         <div class="col col-lg-4">
-          <div class="text--center"><img href="about.html"class="featureImage_ZtzX" src="img/build3.png" alt="My Portfolio"></div>
-          <h3>My Portfolio</h3>
+          <div class="text--center"><a href="about.html"><img  class="featureImage_ZtzX" src="img/build3.png" alt="My Portfolio"></div>
+          <h3>My Portfolio</h3></a>
           <p>I build projects, write blogs, and contribute to open source. Read more about me, view my projects, or read
             about my experiences.</p>
         </div>
-        <div class="col col-lg-4">
-          <div class="text--center"><img href="blog.html"class="featureImage_ZtzX" src="img/build4.png" alt="Open Source"></div>
-          <h3>Open Source</h3>
+        <div class="col col-lg-4 ">
+          <div class="text--center" ><a href="blog.html"><img class="featureImage_ZtzX" src="img/build4.png" alt="Open Source"></div>
+          <h3>Open Source</h3></a>
           <p>Active member of open source community, experience of GSoC, MLH init, Coding Blocks BOSS and
             other programs.</p>
         </div>
@@ -110,10 +110,10 @@
         <div class="container">
           <div class="row">
             <div class="text-center">
-              <a onclick="" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
-              <a onclick="" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
-              <a onclick="" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github" href="https://github.com/Pawanupadhyay10"></i></a>
-              <a onclick="" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+              <a onclick=""href="https://www.facebook.com/profile.php?id=100014167358994"class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+              <a onclick="" href="https://www.linkedin.com/in/narayan-pawan/" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+              <a onclick="" href="https://github.com/Pawanupadhyay10"class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github" ></i></a>
+              <a onclick="" href="mailto:pawandev1099@gmail.com"class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-envelope"></i></a>
             </div>
             </div>
           </div>
