--- a/work.html
+++ b/work.html
@@ -53,10 +53,7 @@
       <!--/.nav-collapse -->
     </div>
   </div>
-
-
   <!-- +++++ Projects Section +++++ -->
-
   <div class="container pt">
     <div class="row mt-0 centered ">
       <h1>My Projects</h1>
@@ -99,7 +96,6 @@
         <p>I build it using <b>MERN stack</b>.</p>
       </div>
     </div>
-    
     <!-- /row -->
   </div>
   <!-- /container -->
@@ -114,11 +110,14 @@
           <div class="container">
             <div class="row">
               <div class="text-center">
-                <a onclick="" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
-                <a onclick="" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
-                <a onclick="" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"
-                    href="https://github.com/Pawanupadhyay10"></i></a>
-                <a onclick="" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+                <a onclick="" href="https://www.facebook.com/profile.php?id=100014167358994"
+                  class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+                <a onclick="" href="https://www.linkedin.com/in/narayan-pawan/"
+                  class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                <a onclick="" href="https://github.com/Pawanupadhyay10" class="btn btn-social-icon btn-lg btn-github"><i
+                    class="fa fa-github"></i></a>
+                <a onclick="" href="mailto:pawandev1099@gmail.com" class="btn btn-social-icon btn-lg btn-twitter"><i
+                    class="fa fa-envelope"></i></a>
               </div>
             </div>
           </div>
@@ -126,7 +125,6 @@
       </div>
     </div>
   </div>
-
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
