--- a/blog.html
+++ b/blog.html
@@ -164,6 +164,27 @@
             </div>
           </div>
 </div>
+<br>
+ <div class="container">
+   <h1>Open-Source-Contribution & Hackathons</h1>
+   <ul>
+   <div class="row">
+     <li><p>I have recently contributed to Gsoc@21 in Polypheny, & solved their bug issue.</p></li>
+     <li><p>This my past <a href="https://github.com/Pawanupadhyay10">contrbution</a>.</p></li>
+   </div>
+    <div class="row">
+      <li><p>I'm member of Fossasia community and recently started contributing to differnt tech projects.</p></li>
+    </div>
+    <div class="row">
+      <li>
+        <p>I am depply interested and love to take part in different Hackerthon as to learn new tech.</p>
+      </li>
+      <li>
+        <p>This is my <a href="https://devpost.com/pawandev1099?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">devpost</a> profile .</p>
+      </li>
+    </div>
+    </ul>
+ </div>
 
   <!-- +++++ Footer Section +++++ -->
 
@@ -174,10 +195,14 @@
         <div class="container">
           <div class="row">
             <div class="text-center">
-              <a onclick="" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
-              <a onclick="" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
-              <a onclick="" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"></i></a>
-              <a onclick="" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+              <a onclick="" href="https://www.facebook.com/profile.php?id=100014167358994"
+                class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+              <a onclick="" href="https://www.linkedin.com/in/narayan-pawan/"
+                class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+              <a onclick="" href="https://github.com/Pawanupadhyay10" class="btn btn-social-icon btn-lg btn-github"><i
+                  class="fa fa-github"></i></a>
+              <a onclick="" href="mailto:pawandev1099@gmail.com" class="btn btn-social-icon btn-lg btn-twitter"><i
+                  class="fa fa-envelope"></i></a>
             </div>
           </div>
         </div>
@@ -185,7 +210,6 @@
     </div>
   </div>
 </div>
-
 
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
