--- a/contact.html
+++ b/contact.html
@@ -144,14 +144,17 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-        <div class="container ">
-          <div class="row ">
+        <div class="container">
+          <div class="row">
             <div class="text-center">
-              <a onclick="" class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
-              <a onclick="" class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
-              <a onclick="" class="btn btn-social-icon btn-lg btn-github"><i class="fa fa-github"
-                  href="https://github.com/Pawanupadhyay10"></i></a>
-              <a onclick="" class="btn btn-social-icon btn-lg btn-twitter"><i class="fa fa-twitter"></i></a>
+              <a onclick="" href="https://www.facebook.com/profile.php?id=100014167358994"
+                class="btn btn-social-icon btn-lg btn-facebook"><i class="fa fa-facebook"></i></a>
+              <a onclick="" href="https://www.linkedin.com/in/narayan-pawan/"
+                class="btn btn-social-icon btn-lg btn-linkedin"><i class="fa fa-linkedin"></i></a>
+              <a onclick="" href="https://github.com/Pawanupadhyay10" class="btn btn-social-icon btn-lg btn-github"><i
+                  class="fa fa-github"></i></a>
+              <a onclick="" href="mailto:pawandev1099@gmail.com" class="btn btn-social-icon btn-lg btn-twitter"><i
+                  class="fa fa-envelope"></i></a>
             </div>
           </div>
         </div>
