--- a/blog.html
+++ b/blog.html
@@ -169,7 +169,7 @@
    <h1>Open-Source-Contribution & Hackathons</h1>
    <ul>
    <div class="row">
-     <li><p>I have recently contributed to Gsoc@21 in Polypheny, & solved their bug issue.</p></li>
+     <li><p>I have recently contributed to Gsoc@21 in <a href="https://github.com/polypheny/Polypheny-UI/pull/47">Polypheny</a>, & solved their bug issue.</p></li>
      <li><p>This my past <a href="https://github.com/Pawanupadhyay10">contrbution</a>.</p></li>
    </div>
     <div class="row">
