--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
           <li><a href="work.html">Projects</a></li>
           <li><a href="blog.html">Tech</a></li>
           <li><a href="contact.html">Certifications</a></li>
+          <li><a href="img/Pawan_Resume_final.pdf" target="_blank" class="btn btn btn-info" style="width:100%;"><i
+              class="fa fa-download"></i>Resume</a></li>
         </ul>
+        
       </div>
       <!--/.nav-collapse -->
     </div>
@@ -78,19 +81,19 @@
   <section class="features_3azU">
     <div class="container">
       <div class="row">
-        <div class="col col-lg-4">
+        <div class="col col-lg-4 centered">
           <div class="text--center"><a href="work.html"><img class="featureImage_ZtzX" src="img/build(2).png" alt="I build"></div>
           <h3>I build</h3></a>
           <p>I believe in problem solving, and build projects that solve real-world problems. I love web technologies,
             CLIs, mobile apps and DevOps.</p>
         </div>
-        <div class="col col-lg-4">
-          <div class="text--center"><a href="about.html"><img  class="featureImage_ZtzX" src="img/build3.png" alt="My Portfolio"></div>
+        <div class="col col-lg-4 centered">
+          <div class="text--center"><a href="about.html"><img  class="featureImage_ZtzX " src="img/build3.png" alt="My Portfolio"></div>
           <h3>My Portfolio</h3></a>
           <p>I build projects, write blogs, and contribute to open source. Read more about me, view my projects, or read
             about my experiences.</p>
         </div>
-        <div class="col col-lg-4 ">
+        <div class="col col-lg-4 centered">
           <div class="text--center" ><a href="blog.html"><img class="featureImage_ZtzX" src="img/build4.png" alt="Open Source"></div>
           <h3>Open Source</h3></a>
           <p>Active member of open source community, experience of GSoC, MLH init, Coding Blocks BOSS and
